Fixed intraboxes being too wide while being dragged

--- a/styles/i3-dark/intrabox/intrabox.css
+++ b/styles/i3-dark/intrabox/intrabox.css
@@ -37,6 +37,8 @@
 	border-top-style:solid;
 	border-top-width:1px;
 	border-top-color:#151530;
+	
+	width:228px;
 }
 .intrabox:hover {
 	-webkit-border-radius:4px;
